--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 <body>
     <h3>Double click on the immage to <i class="fas fa-heart"></i> it</h3>
     <small>You liked it <span id="times">0</span> times</small>
-
-    <div class="loveMe"></div>
     
+        <section class="cats">
+            <div class="cat1 cats" id="cat1"></div>
+            <div class="cat2 cats" id="cat2"></div>
+            <div class="cat3 cats" id="cat3"></div>
+            <div class="cat4 cats" id="cat4"></div>
+            <div class="cat5 cats" id="cat5"></div>
+            <div class="cat6 cats" id="cat6"></div>            
+        </section>   
     <script src="script.js"></script>
 </body>
 </html>
