--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
     <small>You liked it <span id="times">0</span> times</small>
     
         <section class="cats">
-            <div class="cat1 cats" id="cat1"></div>
-            <div class="cat2 cats" id="cat2"></div>
-            <div class="cat3 cats" id="cat3"></div>
-            <div class="cat4 cats" id="cat4"></div>
-            <div class="cat5 cats" id="cat5"></div>
-            <div class="cat6 cats" id="cat6"></div>            
+            
+            <div class="cat1" id="cat1"></div>
+            <div class="cat2" id="cat2"></div>
+            <div class="cat3" id="cat3"></div>
+            <div class="cat4" id="cat4"></div>
+            <div class="cat5" id="cat5"></div>
+            <div class="cat6" id="cat6"></div>            
         </section>   
     <script src="script.js"></script>
 </body>
