refactor and clean up code, remove offset props, create condition, add additional styling

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,13 +9,14 @@
     <script src="https://kit.fontawesome.com/8a3ce9d545.js" crossorigin="anonymous"></script>
     <title>Double Heart Click</title>
 </head>
+
 <body>
-    <h3>Double click on the immage to <i class="fas fa-heart"></i> it</h3>
-    <small>You liked it <span id="total">0</span> times</small>
-    
-        <section class="cats" id="cats">            
-           
-        </section>   
+    <h1>Cat Gallery</h1>
+    <small>Total likes: <span id="total">0</span></small>
+    <h5>Double click on the immage to <i class="fas fa-heart test"></i> it</h5>
+    <section class="cats">
+    </section>
     <script src="script.js"></script>
 </body>
+
 </html>
